DigicielFull/force-app/main/default/objects/TIMBASURVEYS__SurveyTheme__c/TIMBASURVEYS__SurveyTheme__c.object-meta.xml
<CustomObject>
    <label>SurveyTheme</label>
    <nameField>
        <label>SurveyTheme Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SurveyThemes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>