DigicielFull/force-app/main/default/objects/TIMBASURVEYS__SurveyTheme__c/fields/TIMBASURVEYS__BackgroundColor__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__BackgroundColor__c</fullName>
    <label>BackgroundColor</label>
    <length>10</length>
    <type>Text</type>
</CustomField>