DigicielFull/force-app/main/default/objects/TIMBASURVEYS__SurveyTheme__c/fields/TIMBASURVEYS__CustomCSS__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__CustomCSS__c</fullName>
    <label>CustomCSS</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>