DigicielFull/force-app/main/default/objects/TIMBASURVEYS__SurveyTheme__c/fields/TIMBASURVEYS__FontFamily__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__FontFamily__c</fullName>
    <label>FontFamily</label>
    <length>250</length>
    <type>Text</type>
</CustomField>