DigicielFull/force-app/main/default/objects/TIMBASURVEYS__SurveyTheme__c/fields/TIMBASURVEYS__FontSize__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__FontSize__c</fullName>
    <defaultValue>10</defaultValue>
    <description>Survey general font size</description>
    <label>FontSize</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>