DigicielFull/force-app/main/default/objects/TIMBASURVEYS__SurveyTheme__c/fields/TIMBASURVEYS__Header1_Size__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__Header1_Size__c</fullName>
    <defaultValue>26</defaultValue>
    <label>Header1 Size</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>