DigicielFull/force-app/main/default/objects/TIMBASURVEYS__SurveyTheme__c/fields/TIMBASURVEYS__Header2Size__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__Header2Size__c</fullName>
    <defaultValue>22</defaultValue>
    <description>Font size for the h2 tags</description>
    <label>Header2 Size</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>