DigicielFull/force-app/main/default/objects/TIMBASURVEYS__SurveyTheme__c/fields/TIMBASURVEYS__SuccessMsg__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__SuccessMsg__c</fullName>
    <label>Success Message</label>
    <type>TextArea</type>
</CustomField>